--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
+      "rules": {
+        "no-unused-vars": ["warn"]
+      },
     "extends": [
       "react-app",
       "react-app/jest"
