--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.5",
+    "chartjs-plugin-datalabels": "^2.2.0",
+    "dayjs": "^1.11.13",
     "gh-pages": "^6.2.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
